# gammondator

./: .gitignore  CONTRIBUTING.md  PROJECT_OVERVIEW.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: analysis.py  analysis_jobs.py  backends.py  cube.py  db.py  main.py  movegen.py  schemas.py  session_store.py  training_store.py
scripts/: analysis_job_worker.py  gnubg_bridge_real.py  gnubg_bridge_stub.py
tests/: test_api.py  test_backends.py  test_cube.py  test_movegen.py
web/: app.js  index.html  robots.txt  sitemap.xml  styles.css
web/js/: api.js  app.js  feedback.js
